update background and fix contrast

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  background: url(/images/bg.svg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.stat-title {
+  opacity: 0.8;
+}
+.stat-desc {
+  opacity: 0.8;
+}
